RESOLVED FIXED278676
[Cocoa] AV1 codec strings specifying 4:2:0 Colocated subsampling incorrectly fail
https://bugs.webkit.org/show_bug.cgi?id=278676
Summary [Cocoa] AV1 codec strings specifying 4:2:0 Colocated subsampling incorrectly ...
Jer Noble
Reported 2024-08-26 13:46:24 PDT
[Cocoa] AV1 codec strings specifying 4:2:0 Colocated subsampling incorrectly fail
Attachments
Jer Noble
Comment 1 2024-08-26 13:46:25 PDT
Jer Noble
Comment 2 2024-08-26 13:51:33 PDT
EWS
Comment 3 2024-08-27 11:31:28 PDT
Committed 282806@main (4a952c137807): <https://commits.webkit.org/282806@main> Reviewed commits have been landed. Closing PR #32725 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.