[Cocoa] AV1 codec strings specifying 4:2:0 Colocated subsampling incorrectly fail https://bugs.webkit.org/show_bug.cgi?id=278676 rdar://134375956

Reviewed by Eric Carlson.

Correct a mismatch between CoreMedia's definition of the ChromaSubsampling parameter
and the definition used by the AV1 ISO-BMFF bindings specification. CoreMedia uses
a definition whose low-order digit specifies monochrome support, and AV1 uses chroma
sample position in that same digit.

Construct a query paratemer which matches CoreMedia's definition from the codecs
string provided. Also, do more validation of combinations of monochrome and subsampling
coordinates.

* LayoutTests/media/av1-codec-validate-configuration-record-expected.txt: Added.
* LayoutTests/media/av1-codec-validate-configuration-record.html: Added.
* Source/WebCore/platform/graphics/AV1Utilities.cpp:
(WebCore::validateAV1ConfigurationRecord):
* Source/WebCore/platform/graphics/AV1Utilities.h:
* Source/WebCore/platform/graphics/cocoa/AV1UtilitiesCocoa.mm:
(WebCore::validateAV1Parameters):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::validateAV1ConfigurationRecord):

Canonical link: https://commits.webkit.org/282806@main